k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: etnair
  labels:
    app: etnair
